# sesr

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/test/: CMakeLists.txt  sesr_rknn_demo.cpp
demo/: CMakeLists.txt  sesr_rknn_demo.cpp
model/: sesr_collapse_m5_x4.onnx  sesr_collapse_m5_x4.rknn
python/: model_config.yml  readme.md  sesr_opencv.py  sesr_rknn.py
src/: CMakeLists.txt
src/test/: CMakeLists.txt  sesr_opencv_demo.cpp  sesr_rknn_demo.cpp
